--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -1,23 +1,18 @@
-{% if site.duoshuo_shortname %}
-<!-- 多说评论框 start -->
-<div class="ds-thread" data-thread-key="{{ site.url }}{{ page.url }}" data-title="{{page.title}}" data-url="{{ site.url }}{{ page.url }}"></div>
-<!-- 多说评论框 end -->
-<!-- 多说公共JS代码 start (一个网页只需插入一次) -->
-<script type="text/javascript">
-    var duoshuoQuery = {
-        short_name: "{{site.duoshuo_shortname}}"
-    };
-    (function() {
-        var ds = document.createElement('script');
-        ds.type = 'text/javascript';
-        ds.async = true;
-        ds.src = (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//static.duoshuo.com/embed.js';
-        ds.charset = 'UTF-8';
-        (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(ds);
-    })();
+<div id="container"></div>
+<link rel="stylesheet" href="https://imsun.github.io/gitment/style/default.css">
+<script src="https://imsun.github.io/gitment/dist/gitment.browser.js"></script>
+<script>
+var gitment = new Gitment({
+  id: '', // 可选。默认为 location.href
+  owner: 'Maneng',
+  repo: 'https://github.com/Maneng/Maneng.github.io.git',
+  oauth: {
+    client_id: 'a73597e9c3fb7722f41b',
+    client_secret: '86c390579770c30c086a69ae676a31046bda1f27',
+  },
+})
+gitment.render('container')
 </script>
-<!-- 多说公共JS代码 end -->
-{% endif %}
 
 {% if site.disqus_shortname %}
 <div id="disqus_thread"></div>
