--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -5,7 +5,7 @@
 var gitment = new Gitment({
   id: '', // 可选。默认为 location.href
   owner: 'Maneng',
-  repo: 'https://github.com/Maneng/Maneng.github.io.git',
+  repo: 'https://github.com/Maneng',
   oauth: {
     client_id: 'a73597e9c3fb7722f41b',
     client_secret: '86c390579770c30c086a69ae676a31046bda1f27',
