--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -4,7 +4,7 @@
 <script>
 var gitment = new Gitment({
   id: '', // 可选。默认为 location.href
-  owner: 'Maneng',
+  owner: '15918620',
   repo: 'Maneng.github.io',
   oauth: {
     client_id: 'a73597e9c3fb7722f41b',
