--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -3,7 +3,6 @@
 <script src="https://imsun.github.io/gitment/dist/gitment.browser.js"></script>
 <script>
 var gitment = new Gitment({
-  id: '', // 可选。默认为 location.href
   owner: '15918620',
   repo: 'gitment',
   oauth: {
@@ -12,7 +11,7 @@ var gitment = new Gitment({
   },
 })
 gitment.render('container')
-</script>
+</script><!-- 
 
 {% if site.disqus_shortname %}
 <div id="disqus_thread"></div>
@@ -38,4 +37,4 @@ gitment.render('container')
     })();
 </script>
 <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a></noscript>
-{% endif %}
+{% endif %} -->
