--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -4,7 +4,7 @@
 <script>
 var gitment = new Gitment({
   owner: '15918620',
-  repo: 'gitment',
+  repo: 'Maneng.github.io',
   oauth: {
     client_id: 'a73597e9c3fb7722f41b',
     client_secret: '86c390579770c30c086a69ae676a31046bda1f27',
