--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -1,17 +1,4 @@
-<div id="container"></div>
-<link rel="stylesheet" href="https://imsun.github.io/gitment/style/default.css">
-<script src="https://imsun.github.io/gitment/dist/gitment.browser.js"></script>
-<script>
-var gitment = new Gitment({
-  owner: '15918620',
-  repo: 'Maneng.github.io',
-  oauth: {
-    client_id: 'a73597e9c3fb7722f41b',
-    client_secret: '86c390579770c30c086a69ae676a31046bda1f27',
-  },
-})
-gitment.render('container')
-</script><!-- 
+
 
 {% if site.disqus_shortname %}
 <div id="disqus_thread"></div>
@@ -37,4 +24,4 @@ gitment.render('container')
     })();
 </script>
 <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a></noscript>
-{% endif %} -->
+{% endif %} 
